--- a/index.html
+++ b/index.html
@@ -6,26 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/index.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <title>摄像头拍照</title>
 </head>
 
 <body>
     <div id="app">
         <div class="video-list">
-            <div class="video-container">
-                <video id="video0" width="480" height="320" controls></video>
-                <div class="btns"><button onclick="takePhoto(0)">拍照</button></div>
-                <div class="name" id="name0"></div>
-            </div>
-            <div class="video-container">
-                <video id="video1" width="480" height="320" controls></video>
-                <div class="btns"><button onclick="takePhoto(1)">拍照</button></div>
-                <div class="name" id="name1"></div>
+            <div class="video-container" v-for="(item, index) in cameraList" :key="index">
+                <video :id="'video' + index" width="480" height="320" controls></video>
+                <div class="btns">
+                    <button @click="takePhoto(index)">拍照</button>
+                </div>
+                <div class="name" :id="'name' + index">{{item.label}}</div>
             </div>
         </div>
     </div>
 
     <canvas id="canvas" width="480" height="320"></canvas>
+
     <script src="./app.js"></script>
 </body>
 
